--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ before_deploy:
 
 deploy:
   provider: pages
-  skip_cleanup: true
-  github_token: $GITHUB_TOKEN
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
   on:
     branch: master
     python: "3.6"
